--- a/package.json
+++ b/package.json
@@ -4,14 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js"
+    "dev": "nodemon src/server.js --exec babel-node",
+    "build": "babel src/routes --out-dir dist/routes && babel src/server.js --out-dir dist",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/runtime": "^7.12.5",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "nodemon": "^2.0.6"
   }
 }
