--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "@babel/runtime": "^7.12.5",
+    "@babel/plugin-transform-runtime": "^7.12.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -25,8 +27,6 @@
     "@babel/node": "^7.12.1",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
-    "@babel/runtime": "^7.12.5",
-    "@babel/plugin-transform-runtime": "^7.12.1",
     "nodemon": "^2.0.6"
   }
 }
