--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/runtime": "^7.12.5",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "path": "^0.12.7",
-    "@babel/runtime": "^7.12.5",
-    "@babel/plugin-transform-runtime": "^7.12.1"
+    "simple-oauth2": "^4.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
